--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:site_name" content="CodeNews" />
     <meta property=“og:title” content="CodeNews" />
     <meta property="og:description" content="Saiba mais com as notícias da CodeNews."/>
-    <meta property="og:url" content=""/>
+    <meta property="og:url" content="https://franciscobolzachini.github.io/Projeto/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://unsplash.com/pt-br/fotografias/Wh9ZC4727e4"/>
     <meta property="og:image:width" content="1280" />
