--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="Saiba mais com as notícias da CodeNews."/>
     <meta property="og:url" content="https://franciscobolzachini.github.io/Projeto/"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://unsplash.com/pt-br/fotografias/Wh9ZC4727e4"/>
+    <meta property="og:image" content="https://images.unsplash.com/photo-1623039405147-547794f92e9e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=826&q=80"/>
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="640" />  
     <title>CodeNews</title>
